--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -12,7 +12,6 @@
     <packaging>pom</packaging>
     <artifactId>shoulder-dependencies</artifactId>
 
-
     <!-- dependencies version definition -->
     <properties>
         <!-- shoulder framework bom -->
@@ -27,7 +26,9 @@
         <!--<spring-security.version></spring-security.version>-->
         <!-- 与 boot 版本对应关系 https://start.spring.io/actuator/info -->
         <spring-cloud.version>Hoxton.SR6</spring-cloud.version>
-        <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
+
+        <!--由于 spring-cloud-alibaba 一些依赖版本过久，使用时可能出现不兼容问题，且依赖了低版本的 fastJson，故这里不直接使用-->
+        <!--<spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>-->
 
         <!-- build -->
         <java.version>11</java.version>
@@ -82,7 +83,7 @@
         <postgresql.version>42.2.5</postgresql.version>
         <druid.version>1.1.21</druid.version>
         <mybatis-plus.version>3.3.2</mybatis-plus.version>
-        <BeeCP.version>2.5.3</BeeCP.version>
+        <BeeCP.version>2.5.4.1</BeeCP.version>
         <p6spy.version>3.9.1</p6spy.version>
 
         <!-- dataBase-->
@@ -144,13 +145,13 @@
 
 
             <!-- https://spring-cloud-alibaba-group.github.io/github-pages/greenwich/spring-cloud-alibaba.html -->
-            <dependency>
+            <!--<dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                 <version>${spring-cloud-alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
+            </dependency>-->
 
             <!-- ================================== Shoulder-framework party ==================================== -->
 
