--- a/shoulder-build/shoulder-starters/pom.xml
+++ b/shoulder-build/shoulder-starters/pom.xml
@@ -23,8 +23,8 @@
          <module>shoulder-starter-code</module>
          <module>shoulder-starter-auth-server</module>
          <module>shoulder-starter-trace</module>
-         <module>shoulder-starter-minio</module>
-         <module>shoulder-starter-monitor</module>-->
+         <module>shoulder-starter-minio</module>-->
+         <module>shoulder-starter-monitor</module>
     </modules>
 
 
