style(version): 构建时自动更新 shoulder 版本号

--- a/shoulder-build/shoulder-base/shoulder-core/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-core/pom.xml
@@ -175,6 +175,18 @@
             </plugin>-->
 
         </plugins>
+
+        <!-- 构建时自动添加 shoulder 版本号 -->
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>shoulder-version.txt</include>
+                </includes>
+            </resource>
+        </resources>
+
     </build>
 
 
