--- a/shoulder-build/shoulder-starters/pom.xml
+++ b/shoulder-build/shoulder-starters/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-build</artifactId>
-        <version>0.2-SNAPSHOT</version><!-- shoulder-version -->
+        <version>0.2</version><!-- shoulder-version -->
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -24,7 +24,7 @@
          <module>shoulder-starter-auth-server</module>
          <module>shoulder-starter-trace</module>
          <module>shoulder-starter-minio</module>-->
-         <module>shoulder-starter-monitor</module>
+         <!--<module>shoulder-starter-monitor</module>-->
     </modules>
 
 
