refactor(security-token) 完善 security-token 的使用，修复部分bug

--- a/shoulder-build/shoulder-starters/shoulder-starter-auth-server/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-auth-server/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>shoulder-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>cn.itlym</groupId>
+            <artifactId>shoulder-security</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
