fix(negotiation): 完善加解密，实现核心流程

--- a/shoulder-build/shoulder-base/shoulder-http/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-http/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>shoulder-core</artifactId>
         </dependency>
 
+        <!-- 获取方法行号使用 -->
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
