--- a/shoulder-build/shoulder-starters/shoulder-starter-security-code/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-security-code/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-parent</artifactId>
-        <version>0.3-SNAPSHOT</version><!-- shoulder-version -->
+        <version>0.3</version><!-- shoulder-version -->
         <relativePath>../../../shoulder-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -17,6 +17,12 @@
         <dependency>
             <groupId>cn.itlym</groupId>
             <artifactId>shoulder-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
