deploy(0.3): 去除编译警告

--- a/shoulder-build/shoulder-starters/shoulder-starter-auth-server/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-auth-server/pom.xml
@@ -46,6 +46,11 @@
                 <artifactId>maven-source-plugin</artifactId>
             </plugin>
 
+            <!-- deploy -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+            </plugin>
 
         </plugins>
     </build>
