--- a/shoulder-build/shoulder-starters/shoulder-starter-web/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-web/pom.xml
@@ -48,6 +48,23 @@
                 <artifactId>maven-source-plugin</artifactId>
             </plugin>
 
+            <!-- javadoc -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
+
+            <!-- deploy -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+            </plugin>
+
+            <!-- unit test settings when mvn test -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
 
         </plugins>
     </build>
