--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,7 @@
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
-                        <phase>deploy</phase><!-- gpg phase verify deploy -->
+                        <phase>verify</phase><!-- gpg phase verify deploy -->
                         <goals>
                             <goal>sign</goal>
                         </goals>
