--- a/shoulder-build/shoulder-starters/pom.xml
+++ b/shoulder-build/shoulder-starters/pom.xml
@@ -29,4 +29,24 @@
     </modules>
 
 
+    <build>
+        <plugins>
+            <!-- GPG  发布插件-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase><!-- gpg phase verify deploy -->
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
