--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -538,7 +538,7 @@
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
-                        <phase>deploy</phase><!-- gpg phase verify deploy -->
+                        <phase>verify</phase><!-- gpg phase verify deploy -->
                         <goals>
                             <goal>sign</goal>
                         </goals>
