--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -232,7 +232,7 @@
                     <executions>
                         <execution>
                             <id>sign-artifacts</id>
-                            <phase>deploy</phase><!-- gpg phase verify deploy -->
+                            <phase>verify</phase><!-- gpg phase verify deploy -->
                             <goals>
                                 <goal>sign</goal>
                             </goals>
