--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>cn.itlym</groupId>
     <artifactId>shoulder-framework</artifactId>
-    <version>0.3</version><!-- shoulder-version -->
+    <version>0.4-SNAPSHOT</version><!-- shoulder-version -->
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
@@ -172,7 +172,7 @@
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
-                        <phase>verify</phase><!-- gpg phase verify deploy -->
+                        <phase>deploy</phase><!-- gpg phase verify deploy -->
                         <goals>
                             <goal>sign</goal>
                         </goals>
