--- a/shoulder-build/shoulder-base/pom.xml
+++ b/shoulder-build/shoulder-base/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-build</artifactId>
-        <version>0.3</version><!-- shoulder-version -->
+        <version>0.4-SNAPSHOT</version><!-- shoulder-version -->
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>shoulder-base</artifactId>
-    <version>0.3</version><!-- shoulder-version -->
+    <version>0.4-SNAPSHOT</version><!-- shoulder-version -->
     <packaging>pom</packaging>
 
     <modules>
@@ -45,7 +45,7 @@
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
-                        <phase>verify</phase><!-- gpg phase verify deploy -->
+                        <phase>deploy</phase><!-- gpg phase verify deploy -->
                         <goals>
                             <goal>sign</goal>
                         </goals>
