--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-framework</artifactId>
-        <version>0.3</version><!-- shoulder-version -->
+        <version>0.4-SNAPSHOT</version><!-- shoulder-version -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
@@ -38,7 +38,7 @@
             <dependency>
                 <groupId>cn.itlym</groupId>
                 <artifactId>shoulder-dependencies</artifactId>
-                <version>0.3</version><!-- shoulder-version -->
+                <version>0.4-SNAPSHOT</version><!-- shoulder-version -->
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -232,7 +232,7 @@
                     <executions>
                         <execution>
                             <id>sign-artifacts</id>
-                            <phase>verify</phase><!-- gpg phase verify deploy -->
+                            <phase>deploy</phase><!-- gpg phase verify deploy -->
                             <goals>
                                 <goal>sign</goal>
                             </goals>
