--- a/shoulder-build/shoulder-base/shoulder-api-doc-swagger2/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-api-doc-swagger2/pom.xml
@@ -48,11 +48,11 @@
             <optional>true</optional>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <optional>true</optional>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
