--- a/shoulder-build/shoulder-base/shoulder-core/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-core/pom.xml
@@ -10,13 +10,12 @@
         <relativePath>../../../shoulder-parent/pom.xml</relativePath>
     </parent>
 
-    <name>shoulder-core</name>
-    <artifactId>shoulder-core</artifactId>
-    <description>
-        shoulder 核心模块，定义了一些规范，如错误码，异常，日志，统一 REST 返回值，提供了一些工具
-    </description>
-
     <dependencies>
+        <!-- @NonNull / @Nullable 提示 -->
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>annotations</artifactId>
+        </dependency>
 
         <!-- json 解析: jackson 的安全性和功能都比 fastJson 强，也是 spring 的首选 -->
         <dependency>
@@ -24,27 +23,13 @@
             <artifactId>spring-boot-starter-json</artifactId>
         </dependency>
 
+        <!--  servlet -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
             <optional>true</optional>
         </dependency>
 
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>annotations</artifactId>
-        </dependency>
         <!-- ...................... lombok ...................... -->
         <!--<dependency>
             <groupId>org.projectlombok</groupId>
@@ -55,7 +40,6 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
-
         <!-- ...................... 工具 ...................... -->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -65,10 +49,7 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
         </dependency>
-        <!--<dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-        </dependency>-->
+
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
@@ -88,6 +69,8 @@
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-annotations</artifactId>
         </dependency>-->
+
+        <!-- ============================ test ============================ -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -114,6 +97,12 @@
         </dependency>
 
     </dependencies>
+    <name>shoulder-core</name>
+    <artifactId>shoulder-core</artifactId>
+
+    <description>
+        shoulder 核心模块，定义了一些规范，如错误码，异常，日志，统一 REST 返回值，提供了一些工具
+    </description>
 
 
     <build>
