--- a/shoulder-build/shoulder-base/shoulder-security/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-security/pom.xml
@@ -20,7 +20,6 @@
             <artifactId>shoulder-core</artifactId>
         </dependency>
 
-
         <!-- web项目相关依赖 -->
         <dependency>
             <groupId>jakarta.servlet</groupId>
@@ -41,9 +40,18 @@
 
         <!-- oauth2 授权服务器相关依赖 -->
         <dependency>
-            <groupId>org.springframework.security.oauth.boot</groupId>
-            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.3.4.RELEASE</version>
+            <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+            <version>1.0.9.RELEASE</version>
+            <optional>true</optional>
+        </dependency>
+
         <!-- oauth2 资源服务器相关依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
