feat(code) 验证码保存时不保存图片

--- a/shoulder-build/shoulder-starters/shoulder-starter-auth-server/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-auth-server/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>cn.itlym</groupId>
+            <artifactId>shoulder-starter-web</artifactId>
+        </dependency>
+
         <!-- 基本加密算法 -->
         <dependency>
             <groupId>cn.itlym</groupId>
