--- a/shoulder-build/shoulder-base/shoulder-cluster/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-cluster/pom.xml
@@ -19,6 +19,20 @@
             <artifactId>spring-data-redis</artifactId>
         </dependency>
 
+        <!--配置spring session data redis的依赖-->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <!--    <dependency>
+                <groupId>org.springframework.session</groupId>
+                <artifactId>spring-session</artifactId>
+                <version>1.3.5.RELEASE</version>
+                &lt;!&ndash; 2.0.0 M2&ndash;&gt;
+            </dependency>-->
+
     </dependencies>
 
 
